--- a/PokebellWidget/GoogleService-Info (1).plist
+++ b/PokebellWidget/GoogleService-Info (1).plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>app.kikuchi.momorin.Pokebell</string>
+	<string>app.kikuchi.momorin.Bellmy</string>
 	<key>PROJECT_ID</key>
 	<string>pokebell-b58f2</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:126552845991:ios:7705ef7fdc05217ccc3582</string>
+	<string>1:126552845991:ios:69432529522fedfacc3582</string>
 </dict>
 </plist>
