--- a/PokebellWidget/PokebellWidgetExtension.entitlements
+++ b/PokebellWidget/PokebellWidgetExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.app.kikuchi.momorin.Pokebell</string>
+		<string>group.app.kikuchi.momorin.Bellmy</string>
 	</array>
 </dict>
 </plist>
