--- a/Pokebell/GoogleService-Info.plist
+++ b/Pokebell/GoogleService-Info.plist
@@ -9,21 +9,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>app.kikuchi.momorin.Bellmy</string>
+	<string>app.kikuchi.momorin.Pokebellmy</string>
 	<key>PROJECT_ID</key>
 	<string>pokebell-b58f2</string>
 	<key>STORAGE_BUCKET</key>
 	<string>pokebell-b58f2.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:126552845991:ios:69432529522fedfacc3582</string>
 </dict>
